--- a/JaimeEstupiñan_eje1/styles/styles.css
+++ b/JaimeEstupiñan_eje1/styles/styles.css
@@ -2,7 +2,6 @@
 /* Colores del background de la pagina */
 .backgroundColor{
     background-color: #0E0D1F;
-    color: white;
 }
 
 .mainColor{
@@ -34,17 +33,6 @@
     padding: 0px;
 }
 
-/* Titulos */
-
-.title{
-    color: white;
-    width: 100%;
-    margin: 0%;
-    padding-bottom: 2.5%;
-    padding-top: 2.5%;
-    text-align: center;
-}
-
 .text{
 	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
 	font-style: normal;
@@ -52,11 +40,10 @@
 }
 
 .menuNav{
-    width: 80%;
+    width: 100%;
     margin: 5% auto 0 auto;
     margin-top: 0%;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #E5D5BC;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     z-index: 2;
     position: relative;
 }
@@ -79,7 +66,8 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2rem;
     font-weight: 400;
-    color: #333;
+    /*color: #333;*/
+    color: white;
     display: inline-block;
     padding: 15px;
     position: relative;
@@ -89,15 +77,57 @@
 .content{
     position: relative;
 	text-align: justify;
-    float:center;
-    margin: 5% auto 0 auto;
-    max-width: 80%;
+    margin: 0% 2% 0% 2%;
+    max-width:44%;
     padding: 2%;
-    font-size: 150%;
+    font-size: 1.5rem;
+
+    flex: 1;
 }
 
 .content img {
     width: 100%;
-    image-rendering: optimizeQuality;
+}
+
+#mainBlock{
+    position: relative;
+	text-align: justify;
+    float: center;
+    margin: 4% 0 0 4%;
+    max-width: 88%;
+    padding: 2%;
+    font-size: 1.5rem;
+}
+
+#dosCosos{
+    margin: 0% 2% 0% 2%;
+    padding: 4% 0% 0% 0%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+#topPage{
     height: 100%;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+#indexMain{
+    position: relative;
+	text-align: justify;
+    float: center;
+    margin: 4% auto 4% auto;
+    max-width: 90%;
+    padding: 0% 0% 5% 0%;
+    font-size: 1.5rem;
+}
+
+#title{
+    color: white;
+    margin: 0%;
+    position: relative;
 }
