--- a/JaimeEstupiñan_eje1/styles/styles.css
+++ b/JaimeEstupiñan_eje1/styles/styles.css
@@ -107,7 +107,7 @@ a:visited{
     display: inline-block;
     position: relative;
     text-align: center;
-    width: 16.4%;
+    width: 14.06%;
 }
 
 /*Se asigna un color pre definido en una variable al hover del menu de navegacion*/
@@ -196,7 +196,6 @@ a:visited{
     padding: 2%;
 }
 
-
 /*Se definie el tipo de letra que contiene el elemento en la parte superior de la pantalla*/
 #title{
     color: white;
@@ -215,6 +214,53 @@ a:visited{
     text-align: center;
 }
 
+.interactiveMap{
+    padding: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+	text-align: justify;
+    font-size: 1.5rem;
+    flex: 1;
+}
+
+/*
+Estilo con el que cuenta la informacion que se muestra al seleccionar los estados del mapa
+Por defecto empieza oculta la informacion, ya que el usuario no ha seleccionado un estado para mostrarlo
+Se hace que esta sea relativa a la pantalla para que se ajuste a diferentes tipos de resoluciones
+*/
+.informationMap{
+    position: relative;
+	text-align: justify;
+    max-width: 92%;
+    display: none;
+}
+
+/*
+Estilo del boton que se encuentra en la informacion mostrada en el mapa
+Se ubica a la derecha, se le asigna color blanco a las letras, se le asigna un fondo azul entre otras...
+*/
+.buttonMap{
+    float: right;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #008CBA;
+}
+
+#imgBotonInfoMap{
+    width: 200px;
+    float: left;
+}
+
+.liInfoMap{
+    color: #ED0C0C;
+}
 
 /*Estilo definido para pantallas menores a 1220px*/
 @media only screen and (max-width:1220px){
